--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "bootstrap-sass": "^3.3.7",
+    "iconfonts": "^0.11.1",
     "jquery": "^3.2.1",
     "phoenix": "file:deps/phoenix",
     "phoenix_html": "file:deps/phoenix_html"
@@ -17,7 +18,6 @@
     "clean-css-brunch": "~2.0.0",
     "css-brunch": "~2.0.0",
     "javascript-brunch": "~2.0.0",
-    "modularscale-sass": "^3.0.3",
     "sass-brunch": "^2.10.4",
     "uglify-js-brunch": "~2.0.1"
   }
